[package]
authors = ["Eduard Kyvenko <eduard.kyvenko@gmail.com>"]
edition = "2018"
name = "rust-active-window-test"
version = "0.1.0"

[dependencies]
lcid = "0.2"
clap = "3.1.1"

[dependencies.windows]
features = [
  "alloc",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_UI_Input",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_TextServices",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus"
]
version = "0.32.0"
